--- a/samples/Firebase/MLKit.NaturalLanguage/NaturalLanguageSample/NaturalLanguageSample.csproj
+++ b/samples/Firebase/MLKit.NaturalLanguage/NaturalLanguageSample/NaturalLanguageSample.csproj
@@ -149,7 +149,7 @@
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.NaturalLanguage\MLKit.NaturalLanguage.csproj">
         <Project>{B0D91D94-300F-4DEB-A0A7-11DCBDF6FD64}</Project>
-        <Name>MLKit</Name>
+        <Name>MLKit.Vision</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\source\Firebase\RemoteConfig\RemoteConfig.csproj">
         <Project>{2FC178FA-114D-4A51-A3DF-5EA10E2C71C4}</Project>
