--- a/source/Firebase/MLKit.Vision/MLKit.Vision.csproj
+++ b/source/Firebase/MLKit.Vision/MLKit.Vision.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>Xamarin.iOS10</TargetFrameworks>
     <IsBindingProject>true</IsBindingProject>
-    <RootNamespace>Firebase.MLKit</RootNamespace>
-    <AssemblyName>Firebase.MLKit</AssemblyName>
+    <RootNamespace>Firebase.MLKit.Vision</RootNamespace>
+    <AssemblyName>Firebase.MLKit.Vision</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>0.19.0</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
@@ -13,14 +13,14 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>Xamarin.Firebase.iOS.MLKit</PackageId>
-    <Title>Firebase APIs MLKit iOS Library</Title>
-    <Summary>C# bindings for Firebase APIs MLKit iOS Library</Summary>
-    <Description>C# bindings for Firebase APIs MLKit iOS Library</Description>
+    <PackageId>Xamarin.Firebase.iOS.MLKit.Vision</PackageId>
+    <Title>Firebase APIs MLKit Vision iOS Library</Title>
+    <Summary>C# bindings for Firebase APIs MLKit Vision iOS Library</Summary>
+    <Description>C# bindings for Firebase APIs MLKit Vision iOS Library</Description>
     <Authors>Microsoft</Authors>
     <Owners>Microsoft</Owners>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
-    <PackageIcon>firebaseiosmlkit_128x128.png</PackageIcon>
+    <PackageIcon>firebaseiosmlkitvision_128x128.png</PackageIcon>
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=2027941</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -36,10 +36,10 @@
   </ItemGroup>
   
   <ItemGroup>
-    <None Include="MLKit.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.MLKit.targets" />
-    <None Include="MLKit.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.MLKit.targets" />
+    <None Include="MLKit.Vision.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.MLKit.Vision.targets" />
+    <None Include="MLKit.Vision.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.MLKit.Vision.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
-    <None Include="../../../icons/firebaseiosmlkit_128x128.png" Pack="True" PackagePath="firebaseiosmlkit_128x128.png" />
+    <None Include="../../../icons/firebaseiosmlkitvision_128x128.png" Pack="True" PackagePath="firebaseiosmlkitvision_128x128.png" />
   </ItemGroup>
 
   <ItemGroup>
