[Firebase][MLKit] Added an MLKit wrapper for other MLKit components * To avoid breaking changes

--- a/samples/Firebase/MLKit.Vision/MLKitVisionSample/Info.plist
+++ b/samples/Firebase/MLKit.Vision/MLKitVisionSample/Info.plist
@@ -41,7 +41,7 @@
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.xamarin.firebase.ios.MLKitSample</string>
+	<string>com.xamarin.firebase.ios.MLKitVisionSample</string>
 	<key>Custom Property</key>
 	<string></string>
 </dict>
