--- a/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
+++ b/samples/Firebase/MLKit/MLKitSample/MLKitSample.csproj
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="..\..\..\..\packages\Xamarin.Build.Download.0.10.0\build\Xamarin.Build.Download.props" Condition="Exists('..\..\..\..\packages\Xamarin.Build.Download.0.10.0\build\Xamarin.Build.Download.props')" />
+  <Import Project="..\..\..\..\packages\Xamarin.Build.Download.0.10.0\build\Xamarin.Build.Download.props" Condition="Exists('..\..\..\..\packages\Xamarin.Build.Download.0.10.0\build\Xamarin.Build.Download.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-        <ProjectGuid>{6EB1DC55-1D8C-4D5C-AD5C-5C4E74B93FF7}</ProjectGuid>
+        <ProjectGuid>{AF9847A8-8F2E-4F1F-8DF6-B311BAE0407A}</ProjectGuid>
         <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
         <TemplateGuid>{edc1b0fa-90cd-4038-8fad-98fe74adb368}</TemplateGuid>
         <OutputType>Exe</OutputType>
-        <RootNamespace>NaturalLanguageSample</RootNamespace>
-        <AssemblyName>NaturalLanguageSample</AssemblyName>
+        <RootNamespace>MLKitSample</RootNamespace>
+        <AssemblyName>MLKitSample</AssemblyName>
         <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
         <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
         <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
@@ -120,6 +120,7 @@
     <ItemGroup>
         <None Include="Info.plist" />
         <None Include="Entitlements.plist" />
+        <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Main.cs" />
@@ -151,17 +152,27 @@
           <Project>{90DDF7C4-5223-4863-9687-6211BC5D56E5}</Project>
           <Name>MLKit.Common</Name>
         </ProjectReference>
+        <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.ModelInterpreter\MLKit.ModelInterpreter.csproj">
+          <Project>{108BC6F9-E830-4F3B-85A9-DF7A70A06396}</Project>
+          <Name>MLKit.ModelInterpreter</Name>
+        </ProjectReference>
         <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.NaturalLanguage\MLKit.NaturalLanguage.csproj">
           <Project>{43F378EA-35C8-494E-9685-B00EBBA2A7A3}</Project>
           <Name>MLKit.NaturalLanguage</Name>
         </ProjectReference>
+        <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.Vision\MLKit.Vision.csproj">
+          <Project>{B0D91D94-300F-4DEB-A0A7-11DCBDF6FD64}</Project>
+          <Name>MLKit.Vision</Name>
+        </ProjectReference>
     </ItemGroup>
     <ItemGroup>
-        <BundleResource Include="GoogleService-Info.plist" />
+      <BundleResource Include="GoogleService-Info.plist" />
     </ItemGroup>
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Core\Core.targets" />
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.Common\MLKit.Common.targets" />
+    <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.ModelInterpreter\MLKit.ModelInterpreter.targets" />
     <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.NaturalLanguage\MLKit.NaturalLanguage.targets" />
+    <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.Vision\MLKit.Vision.targets" />
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
     <Import Project="..\..\..\..\packages\Xamarin.Build.Download.0.10.0\build\Xamarin.Build.Download.targets" Condition="Exists('..\..\..\..\packages\Xamarin.Build.Download.0.10.0\build\Xamarin.Build.Download.targets')" />
 </Project>
