--- a/samples/Firebase/CloudMessaging/CloudMessagingSample/CloudMessagingSample.csproj
+++ b/samples/Firebase/CloudMessaging/CloudMessagingSample/CloudMessagingSample.csproj
@@ -134,6 +134,10 @@
       <Project>{754D8F56-C3DB-4E33-91D5-45445AB286EF}</Project>
       <Name>InstanceID</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Installations\Installations.csproj">
+      <Project>{65ACD945-5A8A-419D-B9FB-8DFD03C532F4}</Project>
+      <Name>Installations</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
