--- a/samples/Firebase/MLKit.Vision/MLKitVisionSample/MLKitVisionSample.csproj
+++ b/samples/Firebase/MLKit.Vision/MLKitVisionSample/MLKitVisionSample.csproj
@@ -153,6 +153,10 @@
       <Project>{B0D91D94-300F-4DEB-A0A7-11DCBDF6FD64}</Project>
       <Name>MLKit.Vision</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Installations\Installations.csproj">
+      <Project>{65ACD945-5A8A-419D-B9FB-8DFD03C532F4}</Project>
+      <Name>Installations</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
