--- a/source/Firebase/InstanceID/InstanceID.csproj
+++ b/source/Firebase/InstanceID/InstanceID.csproj
@@ -89,6 +89,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\Installations\Installations.csproj" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
