--- a/source/Firebase/MLKit.NaturalLanguage/MLKit.NaturalLanguage.csproj
+++ b/source/Firebase/MLKit.NaturalLanguage/MLKit.NaturalLanguage.csproj
@@ -58,6 +58,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Installations\Installations.csproj" />
     <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
     <ProjectReference Include="..\ABTesting\ABTesting.csproj" />
     <ProjectReference Include="..\RemoteConfig\RemoteConfig.csproj" />
