--- a/source/Firebase/MLKit.Vision/MLKit.Vision.csproj
+++ b/source/Firebase/MLKit.Vision/MLKit.Vision.csproj
@@ -58,6 +58,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Installations\Installations.csproj" />
 	  <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
     <ProjectReference Include="..\MLKit.Common\MLKit.Common.csproj" />
   </ItemGroup>
