--- a/source/Firebase/MLKit.Common/MLKit.Common.targets
+++ b/source/Firebase/MLKit.Common/MLKit.Common.targets
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseMLKitCommonAssemblyName>Firebase.MLKit.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseMLKitCommonAssemblyName>
