--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -94,6 +94,16 @@
 			"component": {
 				"type": "git",
 				"git": {
+					"name": "FirebaseInstallations",
+					"repositoryUrl": "https://github.com/firebase/firebase-ios-sdk.git",
+					"commitHash": "f0d6f5a9ff3af91406d11c79c04e2557c35eb747"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "git",
+				"git": {
 					"name": "FirebaseInstanceID",
 					"repositoryUrl": "https://github.com/firebase/firebase-ios-sdk.git",
 					"commitHash": "bac26882e0f36f87fbe651b38333289de8842e69"
