--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -2,11 +2,11 @@
 	"Registrations": [
 		{
 			"component": {
-				"type": "other",
-				"other": {
+				"type": "git",
+				"git": {
 					"name": "FirebaseABTesting",
-					"version": "3.0.0",
-					"downloadUrl": "https://dl.google.com/dl/cpdc/796e1bc5676e4a0c/FirebaseABTesting-3.0.0.tar.gz"
+					"repositoryUrl": "https://github.com/firebase/firebase-ios-sdk.git",
+					"commitHash": "a43ca45c0dc9480fd16165eabc55e1cbaacc1b67"
 				}
 			}
 		},
@@ -17,6 +17,16 @@
 					"name": "FirebaseAnalytics",
 					"version": "6.4.0",
 					"downloadUrl": "https://dl.google.com/dl/cpdc/46d897fc5f537fb6/FirebaseAnalytics-6.4.0.tar.gz"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "git",
+				"git": {
+					"name": "FirebaseAnalyticsInterop",
+					"repositoryUrl": "https://github.com/firebase/firebase-ios-sdk.git",
+					"commitHash": "6b5ce1cfa2c566a5a6ce55cca340ed6aea91bddd"
 				}
 			}
 		},
@@ -397,6 +407,16 @@
 					"name": "PromisesObjC",
 					"repositoryUrl": "https://github.com/google/promises.git",
 					"commitHash": "6b6f4fe3385ed37389fb231bc40be81de2f1230f"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "git",
+				"git": {
+					"name": "Protobuf",
+					"repositoryUrl": "https://github.com/protocolbuffers/protobuf.git",
+					"commitHash": "d0bfd5221182da1a7cc280f3337b5e41a89539cf"
 				}
 			}
 		}
