--- a/source/Firebase/DynamicLinks/DynamicLinks.csproj
+++ b/source/Firebase/DynamicLinks/DynamicLinks.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.DynamicLinks</RootNamespace>
     <AssemblyName>Firebase.DynamicLinks</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>4.0.7</FileVersion>
+    <FileVersion>4.0.8</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=865537</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>4.0.7</PackageVersion>
+    <PackageVersion>4.0.8</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -49,7 +49,7 @@
       <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <LinkerFlags>-ObjC -lsqlite3 -lz</LinkerFlags>
-      <Frameworks>AssetsLibrary CoreMotion MessageUI QuartzCore Security StoreKit SystemConfiguration UIKit</Frameworks>
+      <Frameworks>QuartzCore</Frameworks>
       <WeakFrameworks>WebKit</WeakFrameworks>
     </NativeReference>
   </ItemGroup>
