--- a/source/Firebase/MLKit.Common/MLKit.Common.csproj
+++ b/source/Firebase/MLKit.Common/MLKit.Common.csproj
@@ -72,8 +72,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
-    <ProjectReference Include="..\Installations\Installations.csproj" />
-    <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
+    <ProjectReference Include="..\Installations\Installations.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
