--- a/source/Firebase/CrashReporting/CrashReporting.csproj
+++ b/source/Firebase/CrashReporting/CrashReporting.csproj
@@ -61,6 +61,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\Installations\Installations.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\Analytics\Analytics.csproj" PrivateAssets="None" />
   </ItemGroup>
