--- a/source/Firebase/Invites/Invites.csproj
+++ b/source/Firebase/Invites/Invites.csproj
@@ -60,6 +60,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\Installations\Installations.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\Analytics\Analytics.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\DynamicLinks\DynamicLinks.csproj" PrivateAssets="None" />
