--- a/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.csproj
+++ b/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.csproj
@@ -61,7 +61,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
-    <ProjectReference Include="..\Installations\Installations.csproj" />
+    <ProjectReference Include="..\Installations\Installations.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
     <ProjectReference Include="..\MLKit.Common\MLKit.Common.csproj" PrivateAssets="None" />
   </ItemGroup>
