--- a/source/Firebase/MLKit.Vision/MLKit.Vision.csproj
+++ b/source/Firebase/MLKit.Vision/MLKit.Vision.csproj
@@ -57,10 +57,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\Installations\Installations.csproj" />
-	  <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
-    <ProjectReference Include="..\MLKit.Common\MLKit.Common.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\Installations\Installations.csproj" PrivateAssets="None" />
+	  <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\MLKit.Common\MLKit.Common.csproj" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
